@@ -6,7 +6,11 @@ DIST gitlab-ci-multi-runner-1.4.1-x86 56606472 SHA256 c4c1d15912a48a6de66a0093ad
 DIST gitlab-ci-multi-runner-1.5.0-amd64 40162568 SHA256 8068a7c0a149cda3782ea58b29ac1f1dfb7018d2021359b2be6094493a86fbf0 SHA512 e06c2aa44d7c369bfa6315221bac19670c97268f64660a320fa9872f86991c1f3c3ef25a9cd233b5769bbf30e1a4958d347f7bbb991dbf10696666332d763314 WHIRLPOOL 4b9e5e06671955245116693d73e5158c0e6a9455127cf6703222a353467c3c57128df0ad682dc47db37b20f98e2a870b5e32344c69c64f301a4611c451305569
 DIST gitlab-ci-multi-runner-1.5.0-arm 36718736 SHA256 38849b5948d892b505f2d8b01b777ed4b22eea2a6ce91aeaf276c3ad6fcb56cd SHA512 14439be83d1f5cb3a2e2b67421138ef4b6ea2ed6636214f082f4db32786a6707c4299c23410ba6c54e06079358acdf84e3a0ee9c5280c17f06576463607187c4 WHIRLPOOL ca677e0d62323021ec477fa031cc1a8cab76757101abe7033c0c1da632f99d225c622792d07df93b935467a7ed987e2cbe6c4dd00e16f06ad3988d4bd21623d2
 DIST gitlab-ci-multi-runner-1.5.0-x86 36892864 SHA256 029e1a570ff5f5f570d107cb451b2a759829ba64fde6965a1d4abc6135ef63be SHA512 06d55f40e3d43ef3524266fec1c009372bb18850394ec5688979fe6bf33e3bf864aa0582ff0de5eb1e088ce2a24b09bdb6a2772643a15f4d8e994c7f194197a9 WHIRLPOOL 8ede1609492f33599078129a44c28eb58f850da715d091b847a753589a68cfac9f206f9c5e7b78eddad67a834279fbd4cd72a7fb5ea09075aa16729f70edeff2
+DIST gitlab-ci-multi-runner-1.6.0-amd64 81450584 SHA256 09dbfd1770253e4216de45e3de359707b9e48d1cd406fe7a7108f0d46880f9c8 SHA512 03c0f1a364509fceaea7c3250885f1d65349cc7b3b9febcb2b67f300b371fcf307f2e44f8c7da57776c05c57c350685459b0167f9dfe1d239d3c472d674dc35e WHIRLPOOL 80dd59f5343efd4a3f0278e66bb1ec7f9b64ed6c16580a9ea9c0554469bf668a7a1553c70e79ffe25e18fe6bea61d219112509ef30c38dc8cb56c4fccc4e37a4
+DIST gitlab-ci-multi-runner-1.6.0-arm 71394024 SHA256 ce42d293752d2781f1d657da6489ebf6f8df610df72742f144004fd12bf88cac SHA512 d23a95d367a9b68fc456fe67a7f243a824f0d1ddb5015740ede83297d328d31e34203ba4d49bac87a81bdefde1ae9aca401016777aaae33c9a4965441ae05381 WHIRLPOOL 8c0a70aab601d785400d1f0993581f41243ac4c01618cd8ff5dc60229cf2184a76adf7e9a1cc1b6ed99392a1aeb17177909dc78d877f71a4126a0990e57b6b8f
+DIST gitlab-ci-multi-runner-1.6.0-x86 72066176 SHA256 ab59163f79e327a1bf6a6d1469762d1f113484b561c6c4dcc07fda127068d9f4 SHA512 ce9eb72e86bd9a2ccd40be585b8f4645d7eb471a4b35a79b4c91dedb95611162c60f2a5e098774ac0879d1dd97f98431372e47e9c5152971d11591a502b0e96f WHIRLPOOL b05f559e04756f2f7cd05a833dbdabf008a98cf1314a81021c76d1c9c2afd4df7d1d5f4c2a585ef97f72dfeef84f2c01e8a6cabba8b018e1ab99ae7ff106b3f4
 EBUILD gitlab-ci-multi-runner-1.4.1.ebuild 2355 SHA256 c911b16ed3d1ff2ade77818f80e5e307f539a0dfad4647f6d2e242e970ca9bc2 SHA512 dd3b949a6494868e584655ede760a92e4a1084cb611b32c26c7850cc9c025860ac8814d94be58e43789137e5451cf633146d302d31c20a683cc7a2760ff84635 WHIRLPOOL bb1ee49e3ca9cc400dc1e11232f45acc51e9f47384742745ea01a709ae3e39f21b497948ef9a43ab5803e43c3c59c6770eba1169ef059d672296c3d9183f3da6
 EBUILD gitlab-ci-multi-runner-1.5.0.ebuild 2355 SHA256 ad37bca040f73fffda558d935f2cb1204c7c3d467c8c07f11d225bef813a4cb6 SHA512 87673b36f8a2c9fa872e5a55955c30c84c7664b2f2a3a9e3c293782747e71808651916e2dc8ce2c9f7aab319c06b5f2703c505e33303eebb2f3aec4369426415 WHIRLPOOL 3b000513d51581fa400699625e4dd3c949516df0cebdcb57b7c86ab9fdc01c0947934c7205ef31a8245fa1b8aaa7805211d5fbe4e5fc930f0de62c11e2dfe6f8
-MISC ChangeLog 1725 SHA256 613f2d74bb991d2e0634a885fcbbc8b2bbf1e767304a42e95415baf80c296cb1 SHA512 cd5867b2e03f96a3997339645d788a48ffb55c429b54eaf297182ff273a7b248ceaac9d9a5b02d117b13e6cf1cd7667f13a7587cc89eed8f57b530034ca791d9 WHIRLPOOL 4b17f169b9eeecfbc3a195e9d0608f1737a79b8d4135465f4db37ed38d3cb10a4001b5c3fd7ba4afcc6d631c84da04b8cec13b97872e0672eff6cd60b7869bc5
+EBUILD gitlab-ci-multi-runner-1.6.0.ebuild 2355 SHA256 ad37bca040f73fffda558d935f2cb1204c7c3d467c8c07f11d225bef813a4cb6 SHA512 87673b36f8a2c9fa872e5a55955c30c84c7664b2f2a3a9e3c293782747e71808651916e2dc8ce2c9f7aab319c06b5f2703c505e33303eebb2f3aec4369426415 WHIRLPOOL 3b000513d51581fa400699625e4dd3c949516df0cebdcb57b7c86ab9fdc01c0947934c7205ef31a8245fa1b8aaa7805211d5fbe4e5fc930f0de62c11e2dfe6f8
+MISC ChangeLog 1943 SHA256 bfce4dd9755ba6c389008a5d024707f3fb9a2273ed4e8d693210113607f64a99 SHA512 ac9e325ce25c6ecfb904cde6b60c6dc628e064a50670a93f7366daba6ca6bb8db033ba3aa3baf886c84a2c9fef517f9407f427e57904961ee319bba635fd5b1e WHIRLPOOL 042661c69541279d133259266da90d3ff7b7f54d875f2fcd46a24ea74605e35fe7d34e4b6234976e39af39c888cb77fa4af6fff940749e356f72bea3b9a9a4fa
 MISC metadata.xml 234 SHA256 f35b97f99a26d73cc441e1d93bfe25aaa4e9f7f6d90c8d05a74f7b7bc5b68472 SHA512 59d8156b3ca3e99c40d5a2a32de7edf2eb53279b2424998862589d6bad77617d23fc852afec0a92f8ac5bb54a88ebc504cc0641029c1936412e90ab03dfdd447 WHIRLPOOL 935a1401910a42f888c991e443a49275ea8b87976c5aa977f670053d97d18754231749749bc92d37d4b5f45ecf65914480942a11b5827b6c08fb24313a428431
